Fixed window resizing, added file extensions
Divs no longer overlap when window is resized. Added file extensions to
InfoBar li ul.

--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,27 @@
 #container {
-    height: auto;
     overflow: hidden;
     background-color: #215e87;
+    min-width: 900px;
+}
+
+#leftContainer {
+    float: none;
+    min-width: 300px;
+}
+
+#rightContainer {
+    float: right;
+    min-width: 800px;
 }
 
 #right {
-    float: right;
+    position: absolute;
+    top: 0px;
+    right: 0px;
     background-color: gray;
 }
 
 #left {
-    float: none;
     overflow: hidden;
     height: 100vh;
 }
