--- a/src/styles/ContentPage.css
+++ b/src/styles/ContentPage.css
@@ -1,10 +1,10 @@
 #contentContainer {
+    min-width: 500px;
     width: 51.7vw;
     height: 93vh;
-    min-width: 400px;
     background-color: #215e87;
     border-left: 2px solid black;
-    overflow: hidden;
+    overflow: auto;
 }
 
 h1 {
