--- a/src/styles/NavBar.css
+++ b/src/styles/NavBar.css
@@ -1,4 +1,5 @@
 nav {
+    min-width: 100px;
     width: 77vw;
     height: 7vh;
     background-color: #2E86C1;
@@ -11,7 +12,7 @@ nav ul button {
     display: inline-block;
     list-style-type: none;
     text-decoration: none;
-    font-size: 24px;
+    font-size: 3vh;
     padding: 1vh 3vw 1vh 3vw;
     border: none;
     border-left: 1px solid black;
